fix: Refactor code structure for improved readability and maintainability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -175,13 +175,16 @@
     font-size: 20px;
     color: white;
     line-height: 32px;
-    font-weight: 500;
+    font-weight: 400;
+    word-spacing: 4px;
+    letter-spacing: 1px;
   }
 
   a {
     color: #a4ffb3;
     text-decoration: underline;
     text-decoration-color: #a4ffb3;
+    font-weight: 500;
   }
 
   .sub-title {
@@ -189,5 +192,7 @@
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 10px;
+    word-spacing: 4px;
+    letter-spacing: 1px;
   }
 }
